--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <form action="">
             <label for="username">
                 <span>Username</span>
-                <input type="text" id="username" name="username" placeholder="Created a username" required>
+                <input type="text" id="username" name="username" placeholder="Create a username" required>
             </label>
             <label for="email">
                 <span>E-mail</span>
@@ -21,13 +21,17 @@
             </label>
             <label for="password">
                 <span>Password</span>
-                <input type="password" id="password" name="password" placeholder="Created a password" required>
+                <input type="password" id="password" name="password" placeholder="Create a password" required>
             </label>
             <input type="submit" id="submit" value="Sign Up">
         </form>
+
+        
         <div class="alternative">
-            <span>Or Connect with your social media</span>
+            <span>Or Connect With Your Social Media</span>
         </div>
+
+
         <div class="social-field">
             <a href="#">
                 <img src="icons/google.png" alt="Enter with Google">
